--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -9,6 +9,8 @@ prune:
 data_sources:
   - type: filesystem
     encoding: utf-8
+  - type: flickr_photosets
+    items_root: /photos/sets
 
 site:
   base_url: https://phillipridlen.com
